# mjmem

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test-linux.yml  build-and-test-windows.yml  build-and-test.yml
benchmarks/: CMakeLists.txt
benchmarks/src/bitops/: benchmark.cpp
benchmarks/src/block_allocator/: benchmark.cpp
benchmarks/src/pool_allocator/: benchmark.cpp
docs/: README.md
docs/reference/: get_allocator.md  set_allocator.md
docs/reference/allocator/: allocator-ctor.md  allocator-dtor.md  allocator-operator-assign.md  allocator-operator-cmp.md  allocator.md  get_allocator.md  set_allocator.md
docs/reference/block_allocator/: block_allocator-allocate.md  block_allocator-allocate_aligned.md  block_allocator-block_size.md  block_allocator-ctor.md  block_allocator-deallocate.md  block_allocator-dtor.md  block_allocator-is_equal.md  block_allocator-max_size.md  block_allocator-resource.md  block_allocator.md
docs/reference/dynamic_allocator/: dynamic_allocator-allocate.md  dynamic_allocator-allocate_aligned.md  dynamic_allocator-ctor.md  dynamic_allocator-deallocate.md  dynamic_allocator-dtor.md  dynamic_allocator-is_equal.md  dynamic_allocator-max_size.md  dynamic_allocator-operator-assign.md  dynamic_allocator.md
docs/reference/endian/: endian.md  from_big_endian.md  from_little_endian.md  integral.md  swap_endian.md  to_big_endian.md  to_little_endian.md
docs/reference/exception/: allocation_failure-ctor.md  allocation_failure-dtor.md  allocation_failure-raise.md  allocation_failure.md  allocation_limit_exceeded-ctor.md  allocation_limit_exceeded-dtor.md  allocation_limit_exceeded-raise.md  allocation_limit_exceeded.md  pool_exhausted-ctor.md  pool_exhausted-dtor.md  pool_exhausted-raise.md  pool_exhausted.md  resource_overrun-ctor.md  resource_overrun-dtor.md  resource_overrun-raise.md  resource_overrun.md
docs/reference/object_allocator/: allocate_object_array.md  allocate_object_array_using_allocator.md  compatible_allocator.md  create_object.md  create_object_using_allocator.md  delete_object.md  delete_object_array.md  delete_object_array_using_allocator.md  delete_object_using_allocator.md  object_allocator-allocate.md  object_allocator-allocate_aligned.md  object_allocator-ctor.md  object_allocator-deallocate.md  object_allocator-dtor.md  object_allocator-is_equal.md  object_allocator-max_size.md  object_allocator-operator-assign.md  object_allocator-operator-cmp.md  object_allocator.md
docs/reference/pool_allocator/: pool_allocator-allocate.md  pool_allocator-allocate_aligned.md  pool_allocator-ctor.md  pool_allocator-deallocate.md  pool_allocator-dtor.md  pool_allocator-free_blocks.md  pool_allocator-is_equal.md  pool_allocator-max_size.md  pool_allocator-resource.md  pool_allocator.md
docs/reference/pool_resource/: pool_resource-contains.md  pool_resource-ctor.md  pool_resource-data.md  pool_resource-destroy.md  pool_resource-dtor.md  pool_resource-empty.md  pool_resource-operator-assign.md  pool_resource-operator-cmp.md  pool_resource-release.md  pool_resource-size.md  pool_resource-swap.md  pool_resource.md
docs/reference/smart_pointer/: make_optimized_pair.md  make_smart_array.md  make_smart_ptr.md  make_unique_smart_array.md  make_unique_smart_ptr.md  optimized_pair-ctor.md  optimized_pair-dtor.md  optimized_pair-first.md  optimized_pair-operator-assign.md  optimized_pair-operator-cmp.md  optimized_pair-second.md  optimized_pair-swap.md  optimized_pair.md  reference_counter-ctor.md  reference_counter-decrement.md  reference_counter-dtor.md  reference_counter-increment.md  reference_counter-unique.md  reference_counter-use_count.md  reference_counter.md  smart_array-ctor.md  smart_array-dtor.md  smart_array-get.md  smart_array-operator-arrow.md  smart_array-operator-assign.md  smart_array-operator-bool.md  smart_array-operator-cmp.md  smart_array-operator-deref.md  smart_array-operator-subscript.md  smart_array-reset.md  smart_array-size.md  smart_array-swap.md  smart_array-unique.md  smart_array-use_count.md  smart_array.md  smart_ptr-ctor.md  smart_ptr-dtor.md  smart_ptr-get.md  smart_ptr-operator-arrow.md  smart_ptr-operator-assign.md  (+34 more)
docs/reference/synchronized_allocator/: synchronized_allocator-allocate.md  synchronized_allocator-allocate_aligned.md  synchronized_allocator-ctor.md  synchronized_allocator-deallocate.md  synchronized_allocator-dtor.md  synchronized_allocator-is_equal.md  synchronized_allocator-max_size.md  synchronized_allocator.md
src/: CMakeLists.txt
src/mjmem/: allocator.cpp  allocator.hpp  api.hpp  bitmap_allocator.cpp  block_allocator.cpp  block_allocator.hpp  dynamic_allocator.cpp  endian.hpp  exception.cpp  exception.hpp  heap_allocator.cpp  object_allocator.hpp  pool_allocator.cpp  pool_allocator.hpp  pool_resource.cpp  pool_resource.hpp  smart_pointer.cpp  smart_pointer.hpp  synchronized_allocator.cpp  synchronized_allocator.hpp  version.hpp
src/mjmem/impl/: allocation_tracking.hpp  bitops.hpp  dllmain.cpp  global_allocator.hpp  main.cpp  rwlock.hpp  tinywin.hpp  utils.hpp
src/mjmem/res/: mjmem.rc
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/allocators_compatibility/: test.cpp
tests/src/bitops/: test.cpp
tests/src/block_allocator/: test.cpp
tests/src/dynamic_allocator/: test.cpp
tests/src/endian/: test.cpp
tests/src/global_allocator/: test.cpp
tests/src/pool_allocator/: test.cpp
tests/src/pool_resource/: test.cpp
tests/src/reference_counter/: test.cpp
tests/src/smart_array/: test.cpp
tests/src/smart_ptr/: test.cpp
tests/src/synchronized_allocator/: test.cpp
tests/src/unique_smart_array/: test.cpp
tests/src/unique_smart_ptr/: test.cpp
tests/src/unit/: smart_array.hpp  smart_ptr.hpp  unique_array.hpp  unique_ptr.hpp  unique_smart_array.hpp  unique_smart_ptr.hpp
tests/src/version_encoding/: test.cpp
